@@ -1,5 +1,10 @@
 2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* Mono.Addins/AddinRegistry.cs: Allow reading add-in manifests
+	  even if the registry is not fully initialized.
+
+2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* Mono.Addins.csproj: Update target framework to 2.0.
 
 2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>
